# future-tech-demos

./: .gitignore  .gitpod.yml  README.md  qaengine.py  requirements.txt  webapp.py
educational/: polars.slides.html
educational/.ipynb_checkpoints/: polars-checkpoint.ipynb
lowlight/: .gitignore  CML.md  README.md  dataloader.py  download_data.sh  dvc.yaml  loss.py  model.py  test.py  train.py  workflow.py
office-day/: main.py  test.ipynb
qa-sweden/: qaengine.py  webapp.py
qa-sweden/books/: cancer.txt  dna.txt  fotboll.txt
qa2/: app.py  env.yml  gradio_app.py  index_books.json  index_project.json  main.ipynb
qa2/books/: disney.txt  kristendom.txt  nils_holgersson_1.txt  sverige.txt
slide-creator/: main.py
timeseries/: a.parquet  crypto_forecast.ipynb  pyproject.toml
