[tool.poetry]
name = "timeseries"
version = "0.1.0"
description = ""
authors = ["Lundez <hampus.londogard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.0"
pandas-datareader = "^0.10.0"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
